# trip-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: agent.ipynb  trip_agent.py
app/routes/: trip_routes.py
app/schemas/: trip_schema.py
app/services/: course_generate.py
app/tools/: __init__.py  all_tools.py
